# MattJackson-busbarAI

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.json  config.example.yaml  config.yaml  providers.yaml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
bench/latency/: paired_anth.py  stgen.py
docs/: architecture.md  configuration.md  development.md  getting-started.md  internals.md  operations.md  protocols.md  reliability.md  roadmap.md  testing.md  why-busbar.md
site/src/content/docs/: routing.md
site/src/content/docs/guides/: governance.mdx
site/src/pages/: index.astro
src/: admin.rs  auth.rs  breaker.rs  config.rs  config_validate.rs  eventstream.rs  forward.rs  governance.rs  handlers.rs  health.rs  ir.rs  json.rs  main.rs  metrics.rs  observability.rs  proto.rs  route.rs  sigv4.rs  state.rs  store.rs  test_support.rs
src/proto/: anthropic.rs  bedrock.rs  cohere.rs  gemini.rs  mod.rs  openai.rs  responses.rs
src/routing/: webhook.rs
