[package]
name = "busbar"
version = "0.1.0"
edition = "2021"
description = "A tiny central LLM gateway: path-based routing + round-robin pools that stack per-model concurrency, with smart per-lane health."
license = "AGPL-3.0-or-later"

[[bin]]
name = "busbar"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures = "0.3"

[profile.release]
opt-level = 2
lto = false
