[package]
name = "busbar"
version = "0.17.4"
edition = "2021"
description = "Native-protocol LLM gateway: lossless cross-protocol translation, weighted pools, per-(pool,lane) circuit breaking, and governance — in one static Rust binary."
license = "AGPL-3.0-or-later"

[[bin]]
name = "busbar"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
http-body = "1"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.1"
opentelemetry-otlp = "0.32.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-opentelemetry = "0.33.0"
sha2 = "0.11.0"
hmac = "0.13.0"
hex = "0.4.3"
rusqlite = { version = "0.40.0", features = ["bundled"] }
getrandom = "0.2"

[dev-dependencies]
# In-crate #[cfg(test)] harness needs reqwest's json feature + axum http1 server.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
axum = { version = "0.7", features = ["http1"] }
http-body-util = "0.1"
futures = "0.3"
bytes = "1"

[profile.release]
opt-level = 2
lto = false
